--- a/DS_Intro_HW_5.ipynb
+++ b/DS_Intro_HW_5.ipynb
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "path= \"C:\\\\Users\\\\yitzh\\\\Downloads\\\\\"\n",
+    "path= \"C:\\\\Users\\\\amitai\\\\Downloads\\\\\"\n",
     "data= pd.read_csv(path+\"destinations_LP_crawler_Ex5.csv\",encoding='ISO-8859-1')\n",
     "data"
    ]
@@ -146,7 +146,7 @@
     "new_list=[]\n",
     "for city in data[\"city\"]: \n",
     "    address= city\n",
-    "    api_key='AIzaS*****'\n",
+    "    api_key='AIzRe*****'\n",
     "    url=\"https://maps.googleapis.com/maps/api/geocode/json?address=%s&key=%s\" % (address,api_key)\n",
     "    try:\n",
     "        response = requests.get(url)\n",
@@ -157,7 +157,6 @@
     "                response_data=response.json()\n",
     "                country=response_data['results'][0]['formatted_address'].split(',')[-1].strip()\n",
     "                try:\n",
-    "#sometimes number appear at the end of formatted_address, if so, take earler word\n",
     "                    int(country)\n",
     "                    country=response_data['results'][0]['formatted_address'].split(',')[-2].strip()\n",
     "                except:\n",
